// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with error 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <form
    onSubmit={undefined}
  >
    <div
      className="MuiCardContent-root-70"
    >
      Baz
    </div>
    <div
      className="MuiCardActions-root-71"
      style={
        Object {
          "paddingBottom": 16,
        }
      }
    >
      <button
        className="MuiButtonBase-root-99 MuiButton-root-73 MuiButton-contained-84 MuiButton-containedPrimary-85 MuiButton-raised-87 MuiButton-raisedPrimary-88 MuiCardActions-action-72"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "width": "100%",
          }
        }
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-74"
        >
          bar
        </span>
        <span
          className="MuiTouchRipple-root-102"
        />
      </button>
    </div>
    <div
      style={
        Object {
          "padding": 20,
          "textAlign": "center",
        }
      }
    >
      <h5
        className="MuiTypography-root-35 MuiTypography-h5-51 MuiTypography-colorError-69"
      >
        foo
      </h5>
    </div>
  </form>
</div>
`;

exports[`renders correctly with title 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <form
    onSubmit={undefined}
  >
    <div
      className="MuiCardHeader-root-29"
    >
      <div
        className="MuiCardHeader-content-32"
      >
        <span
          className="MuiTypography-root-35 MuiTypography-headline-40 MuiCardHeader-title-33"
        >
          foo
        </span>
      </div>
    </div>
    <div
      className="MuiCardContent-root-70"
    >
      Baz
    </div>
    <div
      className="MuiCardActions-root-71"
      style={
        Object {
          "paddingBottom": 16,
        }
      }
    >
      <button
        className="MuiButtonBase-root-99 MuiButton-root-73 MuiButton-contained-84 MuiButton-containedPrimary-85 MuiButton-raised-87 MuiButton-raisedPrimary-88 MuiCardActions-action-72"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "width": "100%",
          }
        }
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-74"
        >
          bar
        </span>
        <span
          className="MuiTouchRipple-root-102"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`renders correctly without title 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <form
    onSubmit={undefined}
  >
    <div
      className="MuiCardContent-root-70"
    >
      Bar
    </div>
    <div
      className="MuiCardActions-root-71"
      style={
        Object {
          "paddingBottom": 16,
        }
      }
    >
      <button
        className="MuiButtonBase-root-99 MuiButton-root-73 MuiButton-contained-84 MuiButton-containedPrimary-85 MuiButton-raised-87 MuiButton-raisedPrimary-88 MuiCardActions-action-72"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "width": "100%",
          }
        }
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-74"
        >
          foo
        </span>
        <span
          className="MuiTouchRipple-root-102"
        />
      </button>
    </div>
  </form>
</div>
`;
